# AIDI-2001

./: 01 Simple_Transformer_Language_Model.ipynb  02_Sentiment_Analysis_with_Transformers.ipynb  03_Named_Entity_Recognition.ipynb  Decoding_Strategies_in_Large_Language Models.ipynb  RAG_with_LangGraph.ipynb  fine_tuning_llms_v2.ipynb  llm_decoding_strategies_tutorial.ipynb  pyproject.toml
Assignments/: assign.ipynb  assignment1.md  fine_tuning_llms.ipynb  llmassignment.ipynb
