[project]
name = "aidi-2001"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "torch>=2.10.0",
    "transformers>=5.0.0",
    "datasets",
    "torch",
    "sentencepiece",
    "seaborn",
    "dataset>=1.6.2",
]
