[project]
name = "aidi-2001"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
  dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "torch>=2.0.0",
    "transformers==4.40.2",
    "datasets>=1.6.2",
    "SentencePiece",
    "protobuf",
    "seaborn",
]
